--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 
 xcode_project: NSData+APNSToken.xcodeproj
 xcode_scheme: NSData+APNSTokenTests
+osx_image: xcode8
 
 script:
   - set -o pipefail && xcodebuild test -project "NSData+APNSToken.xcodeproj" -scheme NSData+APNSTokenTests -destination "platform=iOS Simulator,name=iPhone 6s" | xcpretty
